# Phaser3-Tauri-Template

./: bugs  index.html  package-lock.json  package.json  webpack.config.js
Zoo Battles/: package.json
Zoo Battles/src/: styles.css
Zoo Battles/src-tauri/: Cargo.toml  tauri.conf.json
Zoo Battles/src-tauri/src/: main.rs
src/: Animal.js  AudioManager.js  BattleAnimal.js  BattleManager.js  BootScene.js  CreditsScene.js  HelpScene.js  MenuScene.js  PregameCasinoScene.js  PregameChallengeScene.js  PregameFreeScene.js  PregameScene.js  Preload.js  UI.js  UIManager.js  fonts.js  game.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: MuteButton.js  UIButtons.js
