[package]
# TODO: Project Information
name = "zoobattlesv1"
version = "1.0.0"
description = "Zoo Battles Game"
authors = [""]
license = "ISC"
repository = ""
# Leave this alone, as it references the Tauri edition, and has nothing to do with your project.
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.12", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
